--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 OPENAI_API_KEY = ""
 LANGCAHIN_API_KEY = "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 "
 LANGCHAIN_PROJECT = "GENAIAPPWITHOPENAI"
+GROQ_API_KEY = "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"
